added basic controller using express, fixed image routing

--- a/routes/landingPage.html
+++ b/routes/landingPage.html
@@ -13,7 +13,7 @@
     <button type="submit"> Log in </button>
     <button type="submit"> Sign up </button>
 
-    <img src="google-thief (1).png" alt="bandit">
+    <img src="logo.png" alt="bandit">
 
     </body>
 </html>
